--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Resume</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
   <meta name="viewport" content="width=device-width">
@@ -31,30 +31,29 @@
       </ul>
     </div>
   </div>
-
   <script src="js/resumeBuilder.js"></script>
-  <script type="text/javascript">
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display = 'none';
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display = 'none';
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.display = 'none';
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.display = 'none';
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.display = 'none';
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.display = 'none';
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.display = 'none';
-    }
-  </script>
+//  <script type="text/javascript">
+//    if(document.getElementsByClassName('flex-item').length === 0) {
+//      document.getElementById('topContacts').style.display = 'none';
+//    }
+//    if(document.getElementsByTagName('h1').length === 0) {
+//      document.getElementById('header').style.display = 'none';
+//    }
+//    if(document.getElementsByClassName('work-entry').length === 0) {
+//      document.getElementById('workExperience').style.display = 'none';
+//    }
+//    if(document.getElementsByClassName('project-entry').length === 0) {
+//      document.getElementById('projects').style.display = 'none';
+//    }
+//    if(document.getElementsByClassName('education-entry').length === 0) {
+//      document.getElementById('education').style.display = 'none';
+//    }
+//    if(document.getElementsByClassName('flex-item').length === 0) {
+//      document.getElementById('lets-connect').style.display = 'none';
+//    }
+//    if(document.getElementById('map') === null) {
+//      document.getElementById('mapDiv').style.display = 'none';
+//    }
+//  </script>
 </body>
 </html>
